client ongoing, refactor server to deploy

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,7 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <link href="https://cdn.quilljs.com/1.2.6/quill.snow.css" rel="stylesheet">
     <link rel="icon" href="<%= BASE_URL %>logo.png">
     <title>H8 Overflow</title>
   </head>
